adding logo in header

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <img id='logo' src='./assets/logo.jpeg' />
         <ul class='header-ul' id='header1'>
                 <li id='lang'>ქართული <i class="fa fa-arrow-down" aria-hidden="true"></i></li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> +7 943 534-56-65</li>
