--- a/index.html
+++ b/index.html
@@ -134,11 +134,10 @@
             <div class='footer-item'>
                 <p id='footer-logo'>Futurium</p>
                 <label for='mail-form'>ხელი მოაწერეთ ჩვენს გაზეთს</label>
-                <input id='mail-form' type='text' placeholder='ელ.ფოსტა'/>
-                <!-- <i class="fa fa-paper-plane" aria-hidden="true"></i> -->
+                <input id='mail-form' type='email' placeholder='ელ.ფოსტა'/>
                 <p id='social-title'>სოციალური</p>
                 <span class='social-media'><i class="fa fa-facebook" aria-hidden="true"></i></span><span class='social-media'><i class="fa fa-twitter" aria-hidden="true"></i></span><span class='social-media'><i class="fa fa-youtube-play" aria-hidden="true"></i></span><span class='social-media'><i class="fa fa-pinterest-p" aria-hidden="true"></i></span>
-                <button id='reach-btn'>დაგვიკავშირდით</button>
+                <button type='submit' id='reach-btn'>დაგვიკავშირდით</button>
                 <p id='copyright'>Copyright © 2020 - All Rights Reserved</p>
             </div>
             <ul class='footer-item'>
