renaming advertisement photo to 'banner'

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <p>დაზოგე 40% ფასდაკლებით</p>
             <button>გადადით კატალოგში</button>
         </div>
-        <img src="./assets/crop-kitchen2.jpg" alt="ad">
+        <img src="./assets/banner.jpg" alt="ad">
     </article>
     <footer>
         <img src='./assets/footer.jpg'/>
