replace id='kitchen-img' to 'class='slider-img'

--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
                 <input type='radio' name='r' id='r3' />
                 <input type='radio' name='r' id='r4' />
                 <div class="slide s1">
-                    <img id='kitchen-photo' alt='kitchen designs' src='./assets/slider-1.jpg'>
+                    <img class='slider-img' alt='kitchen designs' src='./assets/slider-1.jpg'>
                 </div>
                 <div class="slide">
-                    <img id='kitchen-photo' alt='kitchen designs' src='./assets/slider-2.jpg'>
+                    <img class='slider-img' alt='kitchen designs' src='./assets/slider-2.jpg'>
                 </div>
                 <div class="slide">
-                    <img id='kitchen-photo' alt='kitchen designs' src='./assets/slider-3.jpeg'>
+                    <img class='slider-img' alt='kitchen designs' src='./assets/slider-3.jpeg'>
                 </div>
                 <div class="slide">
-                    <img id='kitchen-photo' alt='kitchen designs' src='./assets/slider-4.jpeg'>
+                    <img class='slider-img' alt='kitchen designs' src='./assets/slider-4.jpeg'>
                 </div> 
             </div>
         </div>
