adding alt attributes to img elements

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img id='logo' src='./assets/logo.jpeg' />
+        <img id='logo' src='./assets/logo.jpeg' alt='company logo'/>
         <ul class='header-ul' id='header1'>
                 <li id='lang'>ქართული <i class="fa fa-arrow-down" aria-hidden="true"></i></li>
                 <li><i class="fa fa-phone" aria-hidden="true"></i> +7 943 534-56-65</li>
@@ -76,7 +76,7 @@
         <div id='catalog-container'>
             <div class='catalog-item'>
                 <div class='img-div'>
-                    <img src='./assets/modern.png'>
+                    <img src='./assets/modern.png' alt='modern design'>
                     <div class='hover-div'>
                         <button class='hover-btn'>გადადით კატალოგში</button>
                     </div>
@@ -86,7 +86,7 @@
             </div>
             <div class='catalog-item'>
                 <div class='img-div'>
-                    <img src='./assets/neoclassical.jpg'>
+                    <img src='./assets/neoclassical.jpg' alt='neoclassical design'>
                     <div class='hover-div'>
                         <button class='hover-btn'>გადადით კატალოგში</button>
                     </div>
@@ -96,7 +96,7 @@
             </div>
             <div class='catalog-item'>
                 <div class='img-div'>
-                    <img src='./assets/classical.jpg'>
+                    <img src='./assets/classical.jpg' alt='classical design'>
                     <div class='hover-div'>
                         <button class='hover-btn'>გადადით კატალოგში</button>
                     </div>
@@ -111,7 +111,7 @@
         <div id='order-container'>
             <div class='order-item'>
                 <div class='img-div'>
-                    <img src='./assets/measure.jpg' />
+                    <img src='./assets/measure.jpg' alt='worker measuring furniture'/>
                     <span>1</span>
                 </div>
                 <p class='order-title title'>1/ აზომვა</p>
@@ -119,7 +119,7 @@
             </div>
             <div class='order-item'>
                 <div class='img-div'>
-                    <img src='./assets/design.jpg' />
+                    <img src='./assets/design.jpg' alt='designers working on a project'/>
                     <span>2</span>
                 </div>
                 <p class='order-title title'>2/3D დიზაინი</p>
@@ -127,7 +127,7 @@
             </div>
             <div class='order-item'>
                 <div class='img-div'>
-                    <img src='./assets/delivery.jpg' />
+                    <img src='./assets/delivery.jpg' alt='a man making a delivery'/>
                     <span id='green-span'>3</span>
                 </div>
                 <p class='order-title title'>3/ მოტანა</p>
@@ -135,7 +135,7 @@
             </div>
             <div class='order-item'>
                 <div class='img-div'>
-                    <img src='./assets/assembly.jpg' />
+                    <img src='./assets/assembly.jpg' alt='worker working on a furniture'/>
                     <span>4</span>
                 </div>
                 <p class='order-title title'>4/ მონტაჟი</p>
@@ -150,10 +150,10 @@
             <p>დაზოგე 40% ფასდაკლებით</p>
             <button>გადადით კატალოგში</button>
         </div>
-        <img src="./assets/banner.jpg" alt="ad">
+        <img src="./assets/banner.jpg" alt="advertisement kitchen photo">
     </article>
     <footer>
-        <img src='./assets/footer.jpg'/>
+        <img src='./assets/footer.jpg' alt='kitchen design'/>
         <div id='footer-container'>
             <div class='footer-item'>
                 <p id='footer-logo'>Futurium</p>
